+ Views hinzugefügt + Handler-Methoden im Controller hinzugefügt
Offenes TODO: Post-Methode muss noch mit Java-Forms implementiert
werden.

--- a/my-first-app/app/views/index.scala.html
+++ b/my-first-app/app/views/index.scala.html
@@ -1,7 +1,11 @@
-@(message: String)
+@(message: String) 
 
-@main("Welcome to Play") {
+@main("Chat-Anwendung") {
 
-    @play20.welcome(message, style = "Java")
+<br />
+<div>
+	<a href="/registForm" class="btn btn-primary btn-lg btn-block" role="button">Registrieren</a> 
+	<a href="/login" class="btn btn-default btn-lg btn-block" role="button">Einloggen</a>
+</div>
 
 }
