--- a/my-first-app/app/views/main.scala.html
+++ b/my-first-app/app/views/main.scala.html
@@ -3,13 +3,19 @@
 <!DOCTYPE html>
 
 <html>
-    <head>
-        <title>@title</title>
-        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
-        <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
-    </head>
-    <body>
-        @content
-    </body>
+<head>
+<title>@title</title>
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
+<!-- Bootstrap CSS -->
+<link rel="stylesheet" media="screen" href="@routes.Assets.at("css/bootstrap.css")">
+<link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
+<script src="@routes.Assets.at(" js/hello.js")" type="text/javascript"></script>
+<!-- Bootstrap JavaScript -->
+<script src="@routes.Assets.at("js/bootstrap.js") type="text/javascript"></script>
+</head>
+<body>
+	<div class="container">
+		@content
+	</div>
+</body>
 </html>
