--- a/my-first-app/app/views/registForm.scala.html
+++ b/my-first-app/app/views/registForm.scala.html
@@ -1,19 +1,18 @@
+@import helper._
+@(userForm: Form[User])
+
+
 @main("Registrierung") {
 
-<br />
 
-<!-- Formular zur Registrierung -->
 
-<form method="post" action="@routes.regist(username)">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Benutzername</label>
-    <input name="username" type="text" class="form-control" id="exampleInputEmail1" placeholder="Benutzername">
-  </div>
-  <!-- <div class="form-group">
-    <label for="exampleInputPassword1">Kennwort</label>
-    <input name="password" type="password" class="form-control" id="exampleInputPassword1" placeholder="Kennwort">
-  </div> -->
-  <button type="submit" class="btn btn-default">Registrieren</button>
-</form>
+@helper.form(action = routes.Application.submit()) {
 
+        @helper.inputText(userForm("firstname"),'_label -> "Vorname:")
+        @helper.inputText(userForm("lastname"),'_label -> "Nachname:")
+        @helper.inputText(userForm("username"),'_label -> "Benutzername:")
+        @helper.inputText(userForm("password"),'_label -> "Kennwort:")
+    
+	<input type="submit" value="send" />
+}
 }
