--- a/my-first-app/app/views/index.scala.html
+++ b/my-first-app/app/views/index.scala.html
@@ -5,7 +5,7 @@
 <br />
 <div>
 	<a href="/registForm" class="btn btn-primary btn-lg btn-block" role="button">Registrieren</a> 
-	<a href="/login" class="btn btn-default btn-lg btn-block" role="button">Einloggen</a>
+	<a href="/loginForm" class="btn btn-default btn-lg btn-block" role="button">Einloggen</a>
 </div>
 
 }
