--- a/my-first-app/app/views/chat.scala.html
+++ b/my-first-app/app/views/chat.scala.html
@@ -6,10 +6,9 @@
 
 	<div class="col-sm-3">
 	Meine Kontakte:
-	@for(contact <- Users.contactList()) {
-        <a href="#">@contact.getUsername()</a>
-      }
-      
+     @for(user <- Users.contactList()) {
+        <a href="#">@user.getUsername()</a>
+      } 
     Alle Nutzer:  
 	@for(user <- Users.current()) {
         <a href="#">@user.getUsername()</a>
