--- a/my-first-app/app/views/main.scala.html
+++ b/my-first-app/app/views/main.scala.html
@@ -6,16 +6,26 @@
 <head>
 <title>@title</title>
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
+
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/bootstrap.css")">
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-<script src="@routes.Assets.at(" js/hello.js")" type="text/javascript"></script>
+
+<!-- jQuery -->
+<script src="@routes.Assets.at("js/jquery-2.1.4.js")" type="text/javascript"></script>
+
 <!-- Bootstrap JavaScript -->
-<script src="@routes.Assets.at("js/bootstrap.js") type="text/javascript"></script>
+<script src="@routes.Assets.at("js/bootstrap.js")" type="text/javascript"></script>
+
+<!-- select2-Boxen -->
+<script src="@routes.Assets.at("js/select2.js")" type="text/javascript"></script>
+<link rel="stylesheet" href="@routes.Assets.at("css/select2.css")">
+
+<!-- Chat-Anwendung -->
+<script src="@routes.Assets.at("js/chat.contactlist.js")" type="text/javascript"></script>
+
 </head>
 <body>
-	<div class="container">
-		@content
-	</div>
+	<div class="container">@content</div>
 </body>
 </html>
