--- a/my-first-app/app/views/main.scala.html
+++ b/my-first-app/app/views/main.scala.html
@@ -11,6 +11,9 @@
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/bootstrap.css")">
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
+<!-- Font Awesome Icons -->
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+
 <!-- jQuery -->
 <script src="@routes.Assets.at("js/jquery-2.1.4.js")" type="text/javascript"></script>
 
@@ -18,7 +21,7 @@
 <script src="@routes.Assets.at("js/bootstrap.js")" type="text/javascript"></script>
 
 <!-- select2-Boxen -->
-<script src="@routes.Assets.at("js/select2.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("js/select2.full.js")" type="text/javascript"></script>
 <link rel="stylesheet" href="@routes.Assets.at("css/select2.css")">
 
 <!-- Chat-Anwendung -->
