--- a/my-first-app/app/views/chat.scala.html
+++ b/my-first-app/app/views/chat.scala.html
@@ -1,21 +1,55 @@
-@(currentUser: User)
-
-@main("Chat") {
+@(currentUser: User) @main("Chat") {
 
 <div class="row">
+	<br />
+	<div class="col-sm-3" >
 
-	<div class="col-sm-3">
-	Meine Kontakte:
-	@for(contact <- Users.contactList()) {
-        <a href="#">@contact.getUsername()</a>
-      }
-      
-    Alle Nutzer:  
-	@for(user <- Users.current()) {
-        <a href="#">@user.getUsername()</a>
-      }
+		<div class="panel panel-default">
+			<!-- Default panel contents -->
+			<div class="panel-heading">Kontakte</div>
+
+			<!-- List group -->
+			<ul class="list-group">
+				@for(user <- Users.contactList()) {
+				<li class="list-group-item"><a href="#">@user.getUsername()</a></li>
+				}
+			</ul>
+		</div>
+		<div class="panel panel-default">
+			<!-- Default panel contents -->
+			<div class="panel-heading">Kontakte suchen</div>			
+		</div>
+		<select id="contacts" class="js-example-basic-single"
+			style="width: 200px"> @for(user <- Users.current()) {
+			<option value="@user.getId()">@user.getUsername()</option> }
+		</select>
+		<button type="button" class="btn btn-default btn-sm" >
+			<span class="glyphicon glyphicon-plus" />
+		</button>
+
+
 	</div>
-	<div class="col-sm-9">rechts</div>
+	<div class="col-sm-9">Chat-Fenter
+	@main(null) {	
+<div class="greeting"></div>
+<input type="text" id="text"> </input>
+<button class="send">Send</button>
+<script type="text/javascript" charset="utf-8">
+$(function() {
+var WS = window['Socket'] ? Socket : WebSocket
+var sock = new WS("@routes.Application.sockHandler().webSocketURL(request)")
+sock.onmessage = function(event) {
+$('.greeting').append(event.data)
+}
+$('button.send').click(function() {
+	var textToSend= document.getElementById('text').value
+	sock.send("I'm sending:"+textToSend)
+});           
+})
+ </script>
+}
+	</div>
+	
 </div>
 
 
