--- a/my-first-app/app/views/main.scala.html
+++ b/my-first-app/app/views/main.scala.html
@@ -1,3 +1,4 @@
+@import helper._ 
 @(title: String)(content: Html)
 
 <!DOCTYPE html>
@@ -12,7 +13,8 @@
 <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
 
 <!-- Font Awesome Icons -->
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 
 <!-- jQuery -->
 <script src="@routes.Assets.at("js/jquery-2.1.4.js")" type="text/javascript"></script>
@@ -26,7 +28,8 @@
 
 <!-- Chat-Anwendung -->
 <script src="@routes.Assets.at("js/chat.contactlist.js")" type="text/javascript"></script>
-
+<script src="@routes.Assets.at("js/chat.websocket.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("js/chat.select2.js")" type="text/javascript"></script>
 </head>
 <body>
 	<div class="container">@content</div>
