--- a/my-first-app/app/views/chat.scala.html
+++ b/my-first-app/app/views/chat.scala.html
@@ -8,7 +8,7 @@
 
 		<div class="panel panel-default">
 			<!-- Default panel contents -->
-			<div class="panel-heading">Kontakte</div>
+			<div class="panel-heading">Meine Kontakte</div>
 			<input id="username" type="hidden" value="@currentUser.getUsername()"></input>
 			<input id="currentChatPartner" type="hidden" value=""></input>
 
@@ -22,11 +22,17 @@
 		<div class="panel panel-default">
 			<!-- Default panel contents -->
 			<div class="panel-heading">Kontakte suchen</div>
+			<div class="panel-body">
+
+				@helper.form(action = routes.Application.addContact()) { <input
+					type="hidden" name="contactid" id="contactid" class="input-sm" />
+				<input type="submit" id="addbutton" class="btn btn-default btn-sm glyphicon glyphicon-plus disabled" value="+"></input>
+				}
+			</div>
+
 		</div>
-		@helper.form(action = routes.Application.addContact()) { <input
-			type="hidden" name="contactid" id="contactid" class="input-sm" /> <input
-			type="submit" class="btn btn-default btn-sm glyphicon glyphicon-plus"
-			value="+"></input> }
+
+
 	</div>
 	<div class="col-sm-9">
 		<div class="panel panel-default">
@@ -39,7 +45,10 @@
 
 				<form id="chatform" style="height: 64px">
 					<input class="form-control" type="text" id="textinput"> </input>
-					<button type="submit" class="btn btn-default btn-sm col-sm-12" id="send"><b>Senden</b></button>
+					<button type="submit" class="btn btn-default btn-sm col-sm-12"
+						id="send">
+						<b>Senden</b>
+					</button>
 				</form>
 			</div>
 
@@ -52,7 +61,6 @@
 	$("#contacts li").click(function() {
 		$("#currentChatPartner").val(this.id);
 		setChatWindowTitle();
-		console.log($("#currentChatPartner").val());
 	});
 
 	function setChatWindowTitle() {
@@ -66,7 +74,26 @@
 		event.preventDefault();
 
 	});
+
+	function formatPerson(data) {
+		if (!data.id) {
+			return data.text; // Optionsgruppe
+		}
+
+		var icon = 'fa fa-user fa-lg';
+
+		return '<span class="' + icon + '" aria-hidden="true"></span> '
+				+ data.text;
+	}
+
 	$(document).ready(function() {
+		var $eventSelect = $('#contactid');
+		$eventSelect.on("select2:select", function (e) { 
+			   $("#addbutton").attr("class","btn btn-default btn-sm glyphicon glyphicon-plus");
+		});
+		$eventSelect.on("select2:unselect", function (e) { 
+			   $("#addbutton").attr("class","btn btn-default btn-sm glyphicon glyphicon-plus disabled");
+		});
 
 		$.ajax({
 			url : "@routes.Application.getAvailableUsers()",
@@ -77,8 +104,8 @@
 					data : data,
 					allowClear : true,
 					placeholder : 'Benutzer auswählen',
-					formatResult : formatPerson,
-					formatSelection : formatPerson,
+					templateResult : formatPerson,
+					templateSelection : formatPerson,
 					escapeMarkup : function(markup) {
 						return markup;
 					},
@@ -92,13 +119,13 @@
 				});
 			}
 		});
+		
 	});
 	$(function() {
 		var WS = window['Socket'] ? Socket : WebSocket
 		var sock = new WS(
 				"@routes.Application.sockHandler().webSocketURL(request)")
 		sock.onmessage = function(event) {
-			console.log(event);
 			printOnChatWindow(JSON.parse(event.data));
 		}
 		$('#send').click(function() {
@@ -124,22 +151,6 @@
 		var chat_div = document.getElementById('chatwindow');
 		chat_div.scrollTop = chat_div.scrollHeight;
 
-	}
-
-	function formatPerson(data) {
-		console.log(data);
-		if (!data.id) {
-			return data.text; // Optionsgruppe
-		}
-
-		var icon = 'fa fa-user fa-lg';
-
-		if (data.disabled == true) {
-			icon = 'fa fa-user-times fa-lg';
-		}
-
-		return '<span class="' + icon + '" aria-hidden="true"></span> '
-				+ data.text;
 	}
 </script>
 
