+ Es kann keine leere Nachricht gesendet werden.

--- a/my-first-app/app/views/chat.scala.html
+++ b/my-first-app/app/views/chat.scala.html
@@ -130,6 +130,9 @@
 		}
 		$('#send').click(function() {
 			var textToSend = $("#textinput").val();
+			if (textToSend == '') {
+				return;
+			}
 			var json = {
 				message : textToSend,
 				source : $("#username").val(),
