--- a/my-first-app/app/views/main.scala.html
+++ b/my-first-app/app/views/main.scala.html
@@ -3,7 +3,7 @@
 
 <!DOCTYPE html>
 
-<html>
+<html ng-app ="chatApp">
 <head>
 <title>@title</title>
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("css/main.css")">
@@ -26,10 +26,15 @@
 <script src="@routes.Assets.at("js/select2.full.js")" type="text/javascript"></script>
 <link rel="stylesheet" href="@routes.Assets.at("css/select2.css")">
 
+<!-- AngularJS -->
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
+
 <!-- Chat-Anwendung -->
 <script src="@routes.Assets.at("js/chat.contactlist.js")" type="text/javascript"></script>
 <script src="@routes.Assets.at("js/chat.websocket.js")" type="text/javascript"></script>
 <script src="@routes.Assets.at("js/chat.select2.js")" type="text/javascript"></script>
+<script src="@routes.Assets.at("js/chat.angularjs.js")" type="text/javascript"></script>
+
 </head>
 <body>
 	<div class="container">@content</div>
